2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore),
	(totem_pl_parser_parse_internal): Remove unneeded work-around for
	Allofmp3, they've switched to using Flash, read the data off the files
	passed if they look like MP3s in name, and are at the top-level.
	Fixes parsing of the playlists from rozhlas.cz (Closes: #384656)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (add_device_to_menu): fix warning

	* src/totem-scrsaver.c: (totem_scrsaver_set_state):
	* src/totem-scrsaver.h:
	* src/totem.c: (totem_action_play): only disable the screensaver
	if we actually managed to play the movie

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (save_pixbuf), (main): port to
	GOption, add the ability to disable the time monitor thread
	(Closes: #163036)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c: hide the 2 session related options from
	being printed in --help, they're for internal use only
	* src/totem.c: (property_notify_cb): remove debug

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_logo_mode):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_logo_mode):

	Send an Object Notify event when the logo mode changes

	* src/totem-menu.c: (totem_ui_manager_setup):
	* src/totem.c: (totem_action_zoom), (property_notify_cb),
	(totem_callback_connect), (video_widget_create):

	Disable the zoom menu entries when the logo mode is on
	(Closes: #355506)

2006-12-06  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/backend/bacon-video-widget-xine.c: (xine_try_error),
	(bacon_video_widget_button_press),
	(bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_current_frame):
	* src/totem.c: (on_video_button_press_event),
	(video_widget_create): Remove old < 2.9.1 glib compat code in the