@@ -1,5 +1,17 @@
 2006-12-11  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c: (totem_playlist_clear):
+	* src/totem-playlist.h: return TRUE in totem_playlist_clear when
+	we've actually cleared anything (ie. wasn't empty before)
+	* src/totem.c: (totem_action_open_files_list),
+	(update_media_menu_items): use the retval from totem_playlist_clear
+	and only return TRUE if we actually added entries to the playlist.
+	This means the first "open files" on startup gets the right retval
+	and sets up the logo mode if none of the files passed added anything
+	to the playlist (Closes: #384736)
+
+2006-12-11  Bastien Nocera  <hadess@hadess.net>
+
 	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore),
 	(totem_pl_parser_parse_internal): Remove unneeded work-around for
 	Allofmp3, they've switched to using Flash, read the data off the files
